--- a/db/deployment/docker-compose.yaml
+++ b/db/deployment/docker-compose.yaml
@@ -9,6 +9,6 @@ services:
     env_file: .env
     volumes:
        - ./data:/var/lib/postgresql/data
-       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+       - ./initdb:/docker-entrypoint-initdb.d/
     ports:
-      - "5432:5432"
+      - 5432:5432
