--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,27 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-black
-    rev: v21.12b0
+  - repo: https://github.com/ambv/black
+    rev: 23.9.1
     hooks:
       - id: black
         args: ["--line-length", "80"]
         files: '\.py$'
 
-  - repo: https://github.com/pre-commit/mirrors-sqlformat
-    rev: v0.2.4
-    hooks:
-      - id: sqlformat
-        args: ["--indent", "4", "--reindent"]
-        files: '\.sql$'
+  # - repo: https://github.com/sqlfluff/sqlfluff
+  #   rev: 2.3.2
+  #   hooks:
+  #     - id: sqlfluff-lint
+  #       args: [--dialect, postgres]
+  #       files: '\.sql$'
+  #     - id: sqlfluff-fix
+  #       args: [--dialect, postgres]
+  #       files: '\.sql$'
 
-  - repo: https://github.com/pre-commit/mirrors-rustfmt
-    rev: v1.5.0
-    hooks:
-      - id: rustfmt
-        files: '\.rs$'
-
+  # - repo: https://github.com/doublify/pre-commit-rust
+  #   rev: v1.0
+  #   hooks:
+  #   -   id: fmt
+  #       files: '\.rs$'
+  #   -   id: cargo-check
+  #       files: '\.rs$'
+    
 fail_fast: false
