update: prettier config, done creating scraped data classes

--- a/scrape/scraper_ts/package.json
+++ b/scrape/scraper_ts/package.json
@@ -4,6 +4,7 @@
   "description": "scrape Shopify",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write \"src/**/*.ts\"",
     "build": "tsc",
     "start": "node ./dst/index.js",
     "build-run": "npm run build && npm start"
@@ -15,5 +16,8 @@
     "lodash": "^4.17.21",
     "lodash.difference": "^4.5.0",
     "puppeteer": "^21.3.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
