--- a/scrape/scraper_ts/package.json
+++ b/scrape/scraper_ts/package.json
@@ -13,8 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "@types/lodash": "^4.14.199",
-    "lodash": "^4.17.21",
     "lodash.difference": "^4.5.0",
+    "nodejs-polars": "^0.8.2",
     "puppeteer": "^21.3.5"
   },
   "devDependencies": {
