--- a/scrape/scraper_ts/package.json
+++ b/scrape/scraper_ts/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\"",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
     "build": "tsc",
     "start": "node ./dst/index.js",
     "build-run": "npm run build && npm start"
@@ -18,6 +21,7 @@
     "puppeteer": "^21.3.5"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "prettier": "^3.0.3"
   }
 }
