--- a/scrape/scraper_ts/package.json
+++ b/scrape/scraper_ts/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest",
-    "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage",
+    "test-watch": "jest --watchAll",
+    "test-coverage": "jest --coverage",
     "build": "tsc",
     "start": "node ./dst/index.js",
     "build-run": "npm run build && npm start"
@@ -21,7 +21,9 @@
     "puppeteer": "^21.3.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1"
   }
 }
