--- a/backend/deployment/requirements.txt
+++ b/backend/deployment/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.95.1
-pydantic==1.10.2
-SQLAlchemy==1.4.41
-psycopg2-binary==2.9.6
-uvicorn==0.20.0
+fastapi==0.104.1
+psycopg2-binary==2.9.9
+pydantic==2.5.2
+sqlalchemy==2.0.23
+uvicorn==0.24.0.post1
