--- a/scrape/scraper_ts/package.json
+++ b/scrape/scraper_ts/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "@types/lodash": "^4.14.199",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "lodash.difference": "^4.5.0",
     "nodejs-polars": "^0.8.2",
@@ -25,6 +27,7 @@
     "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "supabase": "^1.115.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
