--- a/scrape/scraper_ts/package.json
+++ b/scrape/scraper_ts/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@types/lodash": "^4.14.199",
+    "axios": "^1.6.2",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "lodash.difference": "^4.5.0",
