--- a/scrape/scraper_crawlee/package.json
+++ b/scrape/scraper_crawlee/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "CrawLee",
+    "name": "scraper_crawlee",
     "version": "0.0.1",
     "type": "module",
     "description": "This is an example of a Crawlee project.",
     "dependencies": {
         "crawlee": "^3.0.0",
-        "playwright": "*"
+        "puppeteer": "*"
     },
     "devDependencies": {
         "@apify/tsconfig": "^0.1.0",
