--- a/scrape/scraper_crawlee/package.json
+++ b/scrape/scraper_crawlee/package.json
@@ -5,13 +5,13 @@
     "description": "This is an example of a Crawlee project.",
     "dependencies": {
         "crawlee": "^3.0.0",
-        "puppeteer": "*"
+        "puppeteer": "^21.6.1"
     },
     "devDependencies": {
         "@apify/tsconfig": "^0.1.0",
+        "@types/node": "^20.0.0",
         "tsx": "^4.4.0",
-        "typescript": "~5.3.0",
-        "@types/node": "^20.0.0"
+        "typescript": "~5.3.0"
     },
     "scripts": {
         "start": "npm run start:dev",
