--- a/scrape/scraper_crawlee/package.json
+++ b/scrape/scraper_crawlee/package.json
@@ -11,6 +11,7 @@
         "dotenv": "^16.3.1",
         "lodash": "^4.17.21",
         "lodash.difference": "^4.5.0",
+        "axios": "^1.6.2",
         "puppeteer": "^21.6.1"
     },
     "devDependencies": {
